--- a/Praesidium/Praesidium/Views/Admin/UserTypes.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/UserTypes.cshtml
@@ -4,13 +4,13 @@
 
 
 <div class="panel panel-heading">
-    <h2>User Types Admin Page</h2>
+    <h2>User Roles Admin Page</h2>
 </div>
 
 <div class="panel">
     <div style="">
         <div class="col-md-10">
-            <h4><b>List of User Types</b></h4>
+            <h4><b>List of User Roles</b></h4>
         </div>
         <div class="col-md-2">
             @*<p>
