--- a/Praesidium/Praesidium/Views/Admin/UsersCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/UsersCreate.cshtml
@@ -1,17 +1,12 @@
 ﻿@model Praesidium.Data_Models.Admin.ShUser
 
-@{
-    ViewBag.Title = "UsersCreate";
-}
-
-<h2>UsersCreate</h2>
+<h2>Create User</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ShUser</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -47,20 +42,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FkShUserType, "FkShUserType", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FkShUserType, "Role", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("FkShUserType", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FkShUserType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsDeleted)
-                    @Html.ValidationMessageFor(model => model.IsDeleted, "", new { @class = "text-danger" })
-                </div>
             </div>
         </div>
 
