--- a/Praesidium/Praesidium/Views/Admin/UsersEdit.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/UsersEdit.cshtml
@@ -49,20 +49,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FkShUserType, "FkShUserType", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FkShUserType, "Role", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("FkShUserType", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FkShUserType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsDeleted)
-                    @Html.ValidationMessageFor(model => model.IsDeleted, "", new { @class = "text-danger" })
-                </div>
             </div>
         </div>
 
