--- a/Praesidium/Praesidium/Views/Admin/NavigationItemsEdit.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/NavigationItemsEdit.cshtml
@@ -1,17 +1,12 @@
 ﻿@model Praesidium.Data_Models.Admin.ShSyNavigationItem
 
-@{
-    ViewBag.Title = "NavigationItemsEdit";
-}
-
-<h2>NavigationItemsEdit</h2>
+<h2>Edit Navigation Item</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ShSyNavigationItem</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.RecId)
@@ -33,7 +28,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DisplayText, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DisplayText, "Display Text", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DisplayText, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DisplayText, "", new { @class = "text-danger" })
@@ -41,7 +36,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.IsActive, "Active", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.IsActive)
@@ -51,7 +46,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FkShSySection, "FkShSySection", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FkShSySection, "Section", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("FkShSySection", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FkShSySection, "", new { @class = "text-danger" })
@@ -59,18 +54,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SortOrder, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SortOrder, "Sort Order", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SortOrder, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SortOrder, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ParentId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ParentId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ParentId, "", new { @class = "text-danger" })
             </div>
         </div>
 
