--- a/Praesidium/Praesidium/Views/Admin/SectionsDetails.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/SectionsDetails.cshtml
@@ -1,13 +1,8 @@
 ﻿@model Praesidium.Data_Models.Admin.ShSySection
 
-@{
-    ViewBag.Title = "SectionsDetails";
-}
-
 <h2>SectionsDetails</h2>
 
 <div>
-    <h4>ShSySection</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,7 +14,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
+            Active
         </dt>
 
         <dd>
@@ -29,6 +24,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "SectionsEdit", new { id = Model.RecId }) |
+    @*@Html.ActionLink("Edit", "SectionsEdit", new { id = Model.RecId }) |*@
     @Html.ActionLink("Back to List", "Sections")
 </p>
