--- a/Praesidium/Praesidium/Views/Admin/SectionsEdit.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/SectionsEdit.cshtml
@@ -1,17 +1,12 @@
 ﻿@model Praesidium.Data_Models.Admin.ShSySection
 
-@{
-    ViewBag.Title = "SectionsEdit";
-}
-
-<h2>SectionsEdit</h2>
+<h2>Sections</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ShSySection</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.RecId)
@@ -19,7 +14,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
